[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/theme1.tres" type="Theme" id=1]
[ext_resource path="res://lan_setup.gd" type="Script" id=2]
[ext_resource path="res://Client_Listener.gd" type="Script" id=3]

[node name="lan_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.207843, 0.647059, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="vbox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="search" type="Label" parent="vbox"]
margin_right = 720.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
text = "searching..."
align = 1
valign = 1

[node name="list" type="VBoxContainer" parent="vbox"]
margin_top = 120.0
margin_right = 720.0
margin_bottom = 915.0
size_flags_vertical = 3

[node name="hbox" type="HBoxContainer" parent="vbox"]
margin_top = 935.0
margin_right = 720.0
margin_bottom = 1035.0
custom_constants/separation = 5

[node name="Label" type="Label" parent="vbox/hbox"]
margin_top = 17.0
margin_right = 89.0
margin_bottom = 82.0
text = "IP:"
align = 1
valign = 1

[node name="ip_edit" type="LineEdit" parent="vbox/hbox"]
margin_left = 94.0
margin_right = 515.0
margin_bottom = 100.0
size_flags_horizontal = 3
align = 1
placeholder_text = "192.168.43.1"
placeholder_alpha = 0.5

[node name="join_btn" type="Button" parent="vbox/hbox"]
margin_left = 520.0
margin_right = 720.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
text = "Join"

[node name="Label2" type="Label" parent="vbox"]
margin_top = 1055.0
margin_right = 720.0
margin_bottom = 1120.0
text = "or create:"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="vbox"]
margin_top = 1140.0
margin_right = 720.0
margin_bottom = 1240.0
custom_constants/separation = 20
alignment = 1

[node name="create_btn" type="Button" parent="vbox/HBoxContainer"]
margin_left = 50.0
margin_right = 350.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 100 )
size_flags_horizontal = 0
text = "create"

[node name="back_btn" type="Button" parent="vbox/HBoxContainer"]
margin_left = 370.0
margin_right = 670.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 100 )
size_flags_horizontal = 0
text = "back"

[node name="MarginContainer" type="MarginContainer" parent="vbox"]
margin_top = 1260.0
margin_right = 720.0
margin_bottom = 1280.0
custom_constants/margin_top = 20

[node name="Client_Listener" type="Node" parent="."]
script = ExtResource( 3 )
[connection signal="pressed" from="vbox/hbox/join_btn" to="." method="_on_join_btn_pressed"]
[connection signal="pressed" from="vbox/HBoxContainer/create_btn" to="." method="_on_create_btn_pressed"]
[connection signal="pressed" from="vbox/HBoxContainer/back_btn" to="." method="_on_back_btn_pressed"]
[connection signal="add_new_server" from="Client_Listener" to="." method="_on_Listener_add_new_server"]
